--- a/vercel.json
+++ b/vercel.json
@@ -16,15 +16,15 @@
         }
       }
     ],
-    "headers": [
-      {
-        "source": "https://book-tracker-six.vercel.app/(.*)",
-        "headers": [
-          { "key": "Access-Control-Allow-Credentials", "value": "true" },
-          { "key": "", "value": "*" },
-          { "key": "Access-Control-Allow-Methods", "value": ",,,,," },
-          { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
-        ]
-      }
-    ]
-  }
+  //   "headers": [
+  //     {
+  //       "source": "https://book-tracker-six.vercel.app/(.*)",
+  //       "headers": [
+  //         { "key": "Access-Control-Allow-Credentials", "value": "true" },
+  //         { "key": "", "value": "*" },
+  //         { "key": "Access-Control-Allow-Methods", "value": ",,,,," },
+  //         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+  //       ]
+  //     }
+  //   ]
+  // }
